// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Web does not render an image if display is not received 1`] = `Array []`;

exports[`Web does not render an image if ratio is not received 1`] = `Array []`;

exports[`Web renders a caption if received 1`] = `
<div>
  <div>
    <div>
      <div>
        Some caption
      </div>
    </div>
  </div>
</div>
`;

exports[`Web renders a credit if received 1`] = `
<div>
  <div>
    <div>
      <div>
        SOME CREDIT
      </div>
    </div>
  </div>
</div>
`;

exports[`Web renders an image with no caption 1`] = `
<div>
  <TimesImage
    aspectRatio={1.7777777777777777}
    uri="https://imageserver/someImage"
  />
</div>
`;
